# ChangeLog for net-im/gaim
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.32 2002/12/30 02:58:07 drobbins Exp $

*gaim-0.5.7 (29 Dec 2002)

  29 Dec 2002; Daniel Robbins <drobbins@gentoo.org>: updated to latest version
  of gaim, reworked deps to make them simpler, cleaned up the build code, and
  allowed gtk+ and glib version 2.2.x to satisfy their respective deps (closing
  bug 12641.) Unmasked for the 1.4 release for x86, ~ for ppc.

  23 Dec 2002; Martin Schlemmer <azarah@gentoo.org> :
  Fix glib and gtk+ deps, as it seems to work with versions 2.2.0 ...

*gaim-0.95.6 (11 Nov 2002)

  07 Dec 2002; Jack Morgan <jmorgan@gentoo.org> gaim-0.59.2.ebuild, gaim-0.59.3.ebuild:
  Changed sparc64 to sparc keyword

  11 Nov 2002; Brandon Low <lostlogic@gentoo.org> gaim-0.95.6.ebuild :
  New version. Fixes a couple of bugs from upstream.

*gaim-0.95.5 (17 Oct 2002)

  17 Oct 2002; foser <foser@gentoo.org> gaim-0.95.5.ebuild :
  New version. Fixes a bug in the yahoo transport.

*gaim-0.59.4 (07 Oct 2002)

  12 Oct 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.59.4.ebuild:
  Hopefully fix minor syntax error (bug #8584)
  
  07 Oct 2002; Brandon Low <lostlogic@gentoo.org> gaim-0.59.4.ebuild :
  Version new.  Bug fixes, hopefully stops crashing all the time for
  me.  Now use keyword masking.

*gaim-0.59.3 (19 Sep 2002)

  24 Sep 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.59.3.ebuild :

  in bug #8283 drh@myrealbox.com (Daniel Harding) pointed out that nas
  support is disabled by default.  adjusted ebuild to that effect.

  19 Sep 2002; Brandon Low <lostlogic@shivan.org> gaim-0.59.3.ebuild:

  This one unbreaks what broke in .2

*gaim-0.59.2 (13 Sep 2002)

  13 Sep 2002; Brandon Low <lostlogic@shivan.org> gaim-0.59.2.ebuild:

  This is a small bugfix release, enjoy the updates.

  31 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
