@@ -1,0 +1,1 @@
+MD5 dbaa33562c6f88b60f55dc44b0503ba0 gaim-0.59.8.tar.bz2 1557613
