@@ -1,6 +1,11 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.32 2002/12/30 02:58:07 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.33 2003/01/08 19:51:25 lostlogic Exp $
+
+*gaim-0.5.8 (08 Jan 2003)
+
+  08 Jan 2003; Brandon Low <lostlogic@gentoo.org> :
+  Version bump, just bug fixes, still awaiting 0.60 ;)  
 
 *gaim-0.5.7 (29 Dec 2002)
 
